simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels: 
    app: echo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  template: # 이 아래로는 pod 정의와 동일
    metadata:
      labels: 
        app: echo
    spec: 
      containers:
      - name: nginx
        image: gihyodocker/nginx:latest
        ports:
        - containerPort: 80
      - name: echo
        image: gihyodocker/echo:patched
        ports: 
        - containerPort: 8080
