simple-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec: 
  type: NodePort
  selector:
    app: echo
  ports:
    - name: http
      port: 80
